# gold-universe-orchestrator

./: .clinerules  .gitignore  .gitmodules  .replit  AI_HANDOVER.md  ANTIGRAVITY_README.md  COMMIT_GUIDE.md  GIT_CREDENTIAL_FIX.md  GOLD_UNIVERSE_STATE.md  README.md  TASK_PLAN.md  UpcomingClean_Friday.csv  antigravity_deploy.py  app.py  audit_report.json  audit_report.txt  batch_assay_report.json  credentials.json  index.html  migrate.py  migrate_501.py  push_to_github.sh  pyproject.toml  replit.md  run.sh  server.py  setup_antigravity.sh  token.json  🚀READY_TO_LAUNCH.md
assayer/: assayer_engine.py  results_index.py  smoke_assay.py
attached_assets/: Ma_Assayer.git_1776268713773.md  Ma_Golide_Mothership.git_1776268713773.md
auth/: google_auth.py
bridge/: SupabaseBridge.gs  appsscript.json
doc/: ConfigLedger_Mothership.gs  Mothership_ Intelligence_Core.gs  Mothership_AccaEngine.gs  Mothership_AssayerBridge.gs  Mothership_Genesis.gs  Mothership_HiveMind.gs  Mothership_Menu.gs  Mothership_RiskyAccaBuilder.gs  Mothership_RiskyAnalyzer.gs  Performance_Analyzer.gs  Systems Audit.gs
fetcher/: satellite_bundle_fetcher.py  script_api_client.py  sheet_fetcher.py  sheets_api_client.py
registry/: parse_bundle_smoke_output.txt  populate_registry_from_folder.py  registry.json  registry_fingerprint.json  result_map_sample.json  results_clean_parsed_sample.json  satellite_registry.py  satellite_schema_catalogue_sample.json  satellite_schema_catalogue_sample_v2.json  supabase_registry.py  upcoming_clean_parsed_sample.json  upcomingclean_schema_audit.json  validate_registry.py
(+81 files in other folders)
