[project]
name = "gold-universe-orchestrator"
version = "2.0.0"
description = "Gold Universe Orchestrator — Python layer for Ma Assayer + Mothership + Satellites"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "google-auth>=2.49.2",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "google-api-python-client>=2.194.0",
    "gspread>=6.2.1",
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.11",
    "supabase>=2.13.0",
    "python-dotenv>=1.0.1",
]
